crates/cribo/tests/snapshots/test_cli_stdout__directory_entry_empty_stderr.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stderr
---
Error: Directory <WORKSPACE> does not contain __init__.py or __main__.py
