crates/cribo/tests/snapshots/test_cli_stdout__directory_entry_main_stdout.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stdout
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
directory_entry_main = types.SimpleNamespace()
directory_entry_main.__name__ = 'directory_entry_main'
directory_entry_main.__main__ = types.SimpleNamespace()
"""Test package with __main__.py entry point."""
def main():
    print("Running from __main__.py")
if __name__ == "__main__":
    main()
