crates/cribo/tests/snapshots/test_cli_stdout__stdout_bundling_stderr.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stderr
---
warning: struct `NamespaceImportParams` is never constructed
  --> crates/cribo/src/code_generator.rs:61:8
   |
61 | struct NamespaceImportParams<'a> {
   |        ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: struct `InlinedImportParams` is never constructed
  --> crates/cribo/src/code_generator.rs:76:8
   |
76 | struct InlinedImportParams<'a> {
   |        ^^^^^^^^^^^^^^^^^^^

warning: struct `AddSymbolsParams` is never constructed
  --> crates/cribo/src/code_generator.rs:83:8
   |
83 | struct AddSymbolsParams<'a> {
   |        ^^^^^^^^^^^^^^^^

warning: struct `SymbolImportParams` is never constructed
  --> crates/cribo/src/code_generator.rs:97:8
   |
97 | struct SymbolImportParams<'a> {
   |        ^^^^^^^^^^^^^^^^^^

warning: fields `entry_created_namespaces` and `created_namespace_modules` are never read
    --> crates/cribo/src/code_generator.rs:1543:5
     |
1512 | pub struct HybridStaticBundler {
     |            ------------------- fields in this struct
...
1543 |     entry_created_namespaces: FxIndexSet<String>,
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
...
1546 |     created_namespace_modules: FxIndexSet<String>,
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: associated items `is_in_circular_dependency`, `create_namespace_attr_assignment`, and `generate_submodule_attributes` are never used
    --> crates/cribo/src/code_generator.rs:1612:8
     |
1566 | impl HybridStaticBundler {
     | ------------------------ associated items in this implementation
...
1612 |     fn is_in_circular_dependency(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^
...
4060 |     fn create_namespace_attr_assignment(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
4491 |     fn generate_submodule_attributes(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: multiple associated items are never used
     --> crates/cribo/src/code_generator.rs:6065:8
      |
6016  | impl HybridStaticBundler {
      | ------------------------ associated items in this implementation
...
6065  |     fn collect_module_symbol(&self, stmt: &Stmt, symbols: &mut Vec<String>) {
      |        ^^^^^^^^^^^^^^^^^^^^^
...
6216  |     fn add_imported_symbol_attributes(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
6577  |     fn handle_inlined_module_import(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
6707  |     fn check_if_importing_module(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^
...
6730  |     fn create_namespace_for_inlined_module(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
6790  |     fn add_symbols_to_namespace(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^
...
6835  |     fn add_symbol_to_namespace(
      |        ^^^^^^^^^^^^^^^^^^^^^^^
...
6863  |     fn handle_symbol_import_from_inlined_module(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
7049  |     fn find_modules_with_function_imports(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
7067  |     fn module_has_function_scoped_imports(&self, ast: &ModModule) -> bool {
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
7089  |     fn class_has_method_imports(&self, class_def: &StmtClassDef) -> bool {
      |        ^^^^^^^^^^^^^^^^^^^^^^^^
...
7096  |     fn function_has_imports(body: &[Stmt]) -> bool {
      |        ^^^^^^^^^^^^^^^^^^^^
...
7408  |     fn find_function_imported_modules(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
7930  |     fn transform_function_body_for_renames(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
7941  |     fn transform_stmt_for_renames(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
8023  |     fn rename_references_in_expr(expr: &mut Expr, module_renames: &FxIndexMap<String, String>) {
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^
...
8219  |     fn process_wrapper_module_import(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
8466  |     fn track_import_aliases(
      |        ^^^^^^^^^^^^^^^^^^^^
...
8522  |     fn get_actual_import_name(
      |        ^^^^^^^^^^^^^^^^^^^^^^
...
8941  |     fn rewrite_import(&self, import_stmt: StmtImport) -> Vec<Stmt> {
      |        ^^^^^^^^^^^^^^
...
9074  |     fn rewrite_import_entry_module(&mut self, import_stmt: StmtImport) -> Vec<Stmt> {
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
9260  |     fn handle_dotted_import_attribute(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
9282  |     fn create_parent_namespaces_entry_module(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
9384  |     fn create_namespace_keywords(&self, full_module_path: &str, inlined_key: &str) -> Vec<Keyword> {
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^
...
9477  |     fn create_module_assignment(&self, final_body: &mut Vec<Stmt>, module: &str) {
      |        ^^^^^^^^^^^^^^^^^^^^^^^^
...
9495  |     fn assignment_has_dotted_target(&self, assign: &StmtAssign, parent: &str, attr: &str) -> bool {
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
9506  |     fn is_module_already_assigned(&self, final_body: &[Stmt], module: &str) -> bool {
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
9534  |     fn is_name_chain(&self, expr: &Expr, expected_chain: &str) -> bool {
      |        ^^^^^^^^^^^^^
...
9640  |     fn populate_namespace_with_module_symbols(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
9654  |     fn populate_namespace_with_module_symbols_using_target(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
10276 |     fn create_namespace_object_for_direct_import(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: fields `location`, `context`, and `name_used` are never read
  --> crates/cribo/src/visitors/import_discovery.rs:37:9
   |
35 | pub struct ImportUsage {
   |            ----------- fields in this struct
36 |     /// Where the name was used
37 |     pub location: TextRange,
   |         ^^^^^^^^
38 |     /// In what execution context
39 |     pub context: ExecutionContext,
   |         ^^^^^^^
40 |     /// The actual name used (might be aliased)
41 |     pub name_used: String,
   |         ^^^^^^^^^
   |
   = note: `ImportUsage` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: fields `semantic_bundler` and `module_id` are never read
   --> crates/cribo/src/visitors/import_discovery.rs:106:5
    |
96  | pub struct ImportDiscoveryVisitor<'a> {
    |            ---------------------- fields in this struct
...
106 |     semantic_bundler: Option<&'a SemanticBundler>,
    |     ^^^^^^^^^^^^^^^^
107 |     /// Current module ID if available
108 |     module_id: Option<ModuleId>,
    |     ^^^^^^^^^
